Updated .gitignore to ignore IEx-generated files and .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+
+# Ignore IEx-generated files
+Elixir*
+
+# Ignore those pesky mac folder settings files
+.DS_Store
